	PR ld/13287 	* plugin.c (plugin_should_reload): New function. 	* plugin.h (plugin_should_reload): Declare. 	* ldlang.c (open_input_bfds): Use above function.